# URL-chia-nhom

./: .gitignore  .mcp.json  CLAUDE.md  README.md  USAGE.md  claude_desktop_config.json  install.sh  pyproject.toml  url-labeler.plugin
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
agents/label-coordinator/: AGENT.md
skills/URL/: SKILL.md
skills/build-labels/: SKILL.md
skills/label-data/: SKILL.md
skills/review-labels/: SKILL.md
skills/start/: SKILL.md
src/: install.py  plugin_dir.py  server.py
src/core/: batch_manager.py  classifier.py  data_loader.py  progress_tracker.py  taxonomy_builder.py
src/tools/: batch_tools.py  io_tools.py  label_tools.py  review_tools.py
tests/: test_classifier.py
url-labeler/: README.md
url-labeler/skills/URL/: SKILL.md
url-labeler/skills/URL/references/: input-formats.md
url-labeler/skills/label-data/: SKILL.md
