[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "url-labeler"
version = "1.1.0"
description = "Claude Code plugin: đánh nhãn URL cho phân tích organic traffic theo chủ đề (SEO). Hỗ trợ đến 75,000 hàng."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "maytinh", email = "minhdo01011990@gmail.com" }]
requires-python = ">=3.9"
keywords = ["seo", "url", "classification", "claude", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=0.9",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "gspread>=6.0",
    "gspread-dataframe>=4.0",
    "anthropic>=0.30",
    "pydantic>=2.5",
    "rich>=13.0",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/maytinh/url-labeler"
Repository = "https://github.com/maytinh/url-labeler"
Issues = "https://github.com/maytinh/url-labeler/issues"

[project.scripts]
url-labeler-server = "src.server:run"
url-labeler-plugin-dir = "src.plugin_dir:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"skills"        = "src/url_labeler_plugin/skills"
"agents"        = "src/url_labeler_plugin/agents"
".claude-plugin" = "src/url_labeler_plugin/.claude-plugin"
".mcp.json"     = "src/url_labeler_plugin/.mcp.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
